@@ -8,6 +8,8 @@
   manifest.h
   misc.h
 <!-- psm.h -->
+<!-- rpm46compat.h -->
+<!-- rpm4compat.h -->
   rpmal.h
   rpmcli.h
   rpmds.h
@@ -27,9 +29,6 @@
  
 <libs>
   @abs_top_builddir@/lib/.libs/librpm.so
-  @abs_top_builddir@/rpmdb/.libs/librpmdb.so
-  @abs_top_builddir@/rpmio/.libs/librpmio.so
-  @abs_top_builddir@/misc/.libs/librpmmisc.so
 </libs>
 
 <include_paths>
@@ -42,10 +41,6 @@
   @CFLAGS@
 </gcc_options>
 
-<opaque_types>
-</opaque_types>
-<skip_interfaces>
-</skip_interfaces>
 <include_preamble>
   stdint.h
   stdio.h
@@ -58,5 +53,31 @@
   rpmevr.h
   rpmtag.h
 </include_preamble>
+
 <libs_depend>
+  @abs_top_builddir@/rpmdb/.libs/librpmdb.so
+  @abs_top_builddir@/rpmio/.libs/librpmio.so
+  @abs_top_builddir@/misc/.libs/librpmmisc.so
 </libs_depend>
+
+<opaque_types>
+</opaque_types>
+
+<skip_interfaces>
+</skip_interfaces>
+
+<skip_headers>
+  /usr/include/rpm/*.h
+</skip_headers>
+
+<skip_libs>
+</skip_libs>
+
+<libgroup>
+</libgroup>
+
+<out_params>
+</out_params>
+
+<skip_warnings>
+</skip_warnings>
